<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ndu.passwordstorage.infrastructure.screen.activity.MemoActivity">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site" />

            <EditText
                android:id="@+id/site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/site"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonBarNegativeButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="cancel"
                    android:text="@string/cancel" />

                <Button
                    style="?android:attr/buttonBarPositiveButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="update"
                    android:text="@string/update" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>